# MindPulse

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  test_sdk.py  vite.config.js
.agents/: INSTRUCTIONS.md
.agents/skills/file-return/: SKILL.md
client/: App.jsx  index.html
client/components/: ChatList.jsx  ChatWindow.jsx  FileUpload.jsx
client/tests/: App.test.jsx  ChatList.test.jsx  ChatWindow.test.jsx  setup.js
data/: chats.db
deploy/: .env.docker  Dockerfile.client  Dockerfile.server  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf
deploy/k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml
docs/: AI-software-engineering-guide.md  ARCHITECTURE.md  DEVELOPMENT-GUIDE.md  IMPROVEMENTS.md  README.md  ui-todo.md
docs/design/: current-state.md  functional-design.md
e2e/: debug-new-chat.spec.js  file-browser.spec.js  full-flow.spec.js  health.spec.js  session-resume.spec.js
scripts/: start.sh
server/: _logging.py  ai_client.py  auth.py  auth_routes.py  chat_store.py  file_storage.py  main.py  models.py  session.py
server/database/: __init__.py  connection.py  migrations.py
tests/: conftest.py  test_ai_client.py  test_auth.py  test_chat_store.py  test_file_storage.py  test_file_upload_e2e.py  test_init_flow.py  test_main.py  test_models.py  test_session.py  test_ws_history_flow.py
tests/test_database/: __init__.py  conftest.py  test_chat_repo.py  test_message_repo.py
(+11 files in other folders)
